# dental-inventory-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Makefile  README.md  REPORT.md  main.py  pyproject.toml  requirements.txt  scripts.py  vllm-start.sh
app/agent/: graph.py
app/db/: migrate.py  repository.py  schema.py
app/guardrails/: checks.py
app/models/: domain.py
app/rag/: index.py  loader.py
app/tools/: inventory_tools.py
case/: inventory.json  med_info.txt  safety_regulation.txt  safety_rules.json  test_scenarios.txt
tests/: conftest.py  test_guardrails.py  test_pydantic.py  test_rag_loader.py  test_repository.py
