[project]
name = "ai-dentail-agent"
version = "0.1.0"
description = "LangGraph dental inventory agent with RAG knowledge base and deterministic safety guardrails"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.13.2",
    "langchain>=1.2.14",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=0.1.0",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.4",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.3.0",
    "sqlalchemy>=2.0.48",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[project.scripts]
export-requirements = "scripts:export_requirements"
