[project]
name = "dental-inventory-agent"
version = "0.1.0"
description = "LangGraph dental inventory agent with RAG knowledge base and deterministic safety guardrails"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.13.2",
    "langchain>=1.2.14",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=0.1.0",
    "langchain-openai>=1.1.14",
    "langgraph>=1.1.4",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.3.0",
    "sqlalchemy>=2.0.48",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pip-audit>=2.10.0",
    "pre-commit>=4.5.1",
    "ruff>=0.15.8",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[project.scripts]
export-requirements = "scripts:export_requirements"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "ANN",  # type annotation checks
]
ignore = [
    "ANN202",  # private/inner functions (LangGraph node closures)
    "ANN204",  # __init__ / dunder return types
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN"]  # no annotation requirements in tests
"tests/test_rag_loader.py" = ["ANN", "E501"]  # synthetic med data mirrors real med_info.txt format
